manifests/base/2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acmeair-monolithic-service
  labels:
    app: acmeair
    tier: monolithic
  namespace: acmeair
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9080
  selector:
    app: acmeair
    tier: monolithic
