manifests/base/8_db_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: acmeair-db
  name: acmeair-db
  namespace: acmeair
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    db: acmeair-db
