manifests/base/3_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: acmeair
  namespace: acmeair
  labels:
    app: acmeair
    tier: monolithic
  annotations:
    haproxy.router.openshift.io/timeout=120s
spec:
  subdomain: acmeair
  to:
    kind: Service
    name: acmeair-http
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
